# exam_Bash_MLOps

./: Makefile  pyproject.toml  requirements.txt
data/raw/: sales_data.csv
scripts/: collect.sh  cron.txt  preprocessed.sh  train.sh
src/: preprocessed.py  train.py
