[project]
name = "exam-bash-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "fastapi==0.121.0",
    "h11==0.16.0",
    "idna==3.11",
    "pandas>=2.3.3",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pytest>=9.0.0",
    "scikit-learn>=1.7.2",
    "sniffio==1.3.1",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
    "xgboost>=3.1.1",
]
